--- a/assignment2/css/style.css
+++ b/assignment2/css/style.css
@@ -14,6 +14,12 @@ form{
         bottom: 0;
         width: 100%;
  }
+
+  .demo-card-square {
+            width: 1000px;
+            height: 300px;
+        }
+
 /* .container{ */
   /* text-align: center; */
 /* .mdl-data-table{ */
